samples/_failures_safe/1761472777_c8a499_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c11154d1.c: In function ‘display_stats’:
./samples/SAFE/__tmp_c11154d1.c:149:11: error: expected ‘;’ at end of input
  149 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_c11154d1.c:149:5: error: expected declaration or statement at end of input
  149 |     printf
      |     ^~~~~~
